Update service package